# FinMatcher

./: .env.example  .gitignore  CHECKPOINT_RESULTS.md  DEPLOYMENT_GUIDE.md  README.md  TESTING_COMPLETE.md  TEST_FILES_DOCUMENTATION.md  TEST_RESULTS.md  check_schema.py  cleanup.bat  cleanup.py  complete_setup.sh  complete_setup.sh.deprecated  comprehensive_validation_test.py  config.yaml  configure_and_test.py  create_drive_folder.py  deep_cleanup.bat  fetch_emails_with_attachments.py  final_performance_report.py  finmatcher_validation_results.json  fix_database.sh  fix_imports.py  fix_postgres_auth.sh  generate_test_report.py  integration_plan.py  main.py  migrate.py  milestone_queries.sql  monitor_progress.py  performance_analysis.py  phase1_config.yaml  phase1_core_integration.py  phase1_database_setup.sql  pyproject.toml  quick_create_folder.py  quick_integration_guide.md  quick_status.py  reconcile_all.py  reset_and_migrate.sh  (+19 more)
finmatcher/config/: configuration_manager.py  settings.py  test_weight_normalization_properties.py
finmatcher/core/: __init__.py  deepseek_client.py  email_fetcher.py  financial_filter.py  matcher_engine.py  matching_engine.py  ocr_engine.py  statement_parser.py  (+3 more)
finmatcher/utils/: logger.py  (+6 more)
schema/: README.md  SETUP_INSTRUCTIONS.md  add_attachment_fields.sql  apply_attachment_fields.py  apply_schema.py  finmatcher_complete_schema.sql  init_v3.sql  migrate.py  migrate.py.deprecated  migrate_v2_to_v3.sql  test_schema.py
tests/: conftest.py  test_bloom_filter_cache_init.py  test_bloom_filter_integration.py  test_bloom_filter_membership.py  test_bloom_filter_metrics.py  test_bloom_filter_operations.py  test_bloom_filter_requirement_3_11.py  test_data_models.py  test_deepseek_error_handling.py  test_integration_e2e.py  test_integration_simple.py  test_optimization_config.py  test_performance.py  test_query_candidates.py  test_spatial_indexer.py  test_spatial_indexer_cache_management.py  test_spatial_indexer_serialization.py
(+73 files in other folders)
